<resources>
    <string name="app_name">Ecommerce1</string>
    <string name="kleine">Kleine.</string>
    <string name="shopping_page">Shopping Page</string>
    <string name="hintFirstName">First Name</string>
    <string name="hintLastName">Last Name</string>
    <string name="hintPassword">Password</string>
    <string name="hintEmail">Email</string>

    <string name="login_btn_facebook">Facebook</string>
    <string name="login_btn_google">Google</string>
    <string name="start_btn">Start</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="content_texture_right">right texture image</string>
    <string name="letsLogIn">Let\'s Login</string>
    <string name="letsRegister">Let\'s Register</string>
    <string name="resetPassword">Reset Password</string>
    <string name="weWillSendYouPasswordLink">We will send you the password reset link to your email</string>
    <string name="g_see_product">See product</string>
    <string name="cancel">Cancel</string>
    <string name="send">Send</string>
    <string name="menu_home">Home</string>
    <string name="menu_search">Search</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_profile">Profile</string>
    <string name="search_now">Search Now</string>
    <string name="best_deals">Best deals</string>
    <string name="best_products">Best products</string>

    <string name="dontHaveAnAccount">Don\'t have an account? Register</string>
    <string name="doYouHaveAnAccount">Do you have an account? Log in</string>
    <string name="register_btn">Register</string>
    <string name="login_btn">Login</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAny Day</string>
    <string name="quality">It is now very easy to reach the\n best quality among the\nproducts on the internet!</string>
</resources>